Last mouse event could be lost if a JS call to eventSender.leapForward is made https://bugs.webkit.org/show_bug.cgi?id=73366

Patch by Hugo Parente Lima <hugo.lima@openbossa.org> on 2011-12-05
Reviewed by Kenneth Rohde Christiansen.

Tools:

Empty the entire event queue when requested besides using
sendEvent instead of postEvent to make sure all events were
delivered.

* WebKitTestRunner/qt/EventSenderProxyQt.cpp:
(WTR::EventSenderProxy::EventSenderProxy):
(WTR::EventSenderProxy::sendOrQueueEvent):
(WTR::EventSenderProxy::replaySavedEvents):

LayoutTests:

Add test to check if the test driver doesn't eat mouse events when
a JS call to eventSender.leapForward was made. This bug happened at
least on Qt version of WebKitTestRunner.

* fast/events/dont-loose-last-event-expected.txt: Added.
* fast/events/dont-loose-last-event.html: Added.

Canonical link: https://commits.webkit.org/90503@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102048 268f45cc-cd09-0410-ab3c-d52691b4dbfc